engine-net-2/examples/Errors/SubgraphError.grs
new graph "Rules.grg"

exec b:boolean=true ;> sub.b

quit
